--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "ken-mugy",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon app"
+    "start": "nodemon server"
   },
   "dependencies": {
     "@hapi/joi": "^16.1.7",
